# hs-hdf5

./: .gitignore  Changelog  README.md  find_defs.py  hdf5.cabal  stack.yaml
cbits/: H5FDmpi_inline.c
debian/: changelog  control  copyright  rules  watch
include/: mangle.h
src/Bindings/: HDF5.hs
src/Bindings/HDF5/: Attribute.hs  Core.hs  Dataset.hs  Dataspace.hs  Datatype.hs  Error.hs  ErrorCodes.hs  File.hs  Group.hs  Link.hs  Object.hs  PropertyList.hs  Raw.hs
src/Bindings/HDF5/Core/: HDFResultType.hs  HId.hs
src/Bindings/HDF5/Datatype/: Internal.hs
src/Bindings/HDF5/PropertyList/: DAPL.hs  DCPL.hs  DXPL.hs  FAPL.hs  FCPL.hs  FMPL.hs  GAPL.hs  GCPL.hs  LAPL.hs  LCPL.hs  OCPL.hs  OCPYPL.hs  STRCPL.hs  TAPL.hs  TCPL.hs
src/Bindings/HDF5/Raw/: H5.hsc  H5A.hsc  H5AC.hsc  H5C.hsc  H5D.hsc  H5E.hsc  H5F.hsc  H5FD.hsc  H5G.hsc  H5I.hsc  H5L.hsc  H5MM.hsc  H5O.hsc  H5P.hsc  H5R.hsc  H5S.hsc  H5T.hsc  H5Z.hsc  Util.hs
src/Bindings/HDF5/Raw/H5FD/: Core.hsc  Direct.hsc  Family.hsc  Log.hsc  MPI.hsc  Multi.hsc  Sec2.hsc  StdIO.hsc  Windows.hsc
src/Foreign/LibFFI/: Base.hs  FFITypes.hs  Internal.hsc  Types.hs
src/Foreign/Ptr/: Conventions.hs
test/: Spec.hs
test/Spec/: File.hs  Group.hs  Util.hs
