name:                   hdf5
version:                1.8.8
stability:              provisional

cabal-version:          >= 1.8
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               https://github.com/mokus0/hs-hdf5

category:               Database
synopsis:               Haskell interface to the HDF5 scientific data storage library.
description:            This is a low-level but typesafe Haskell interface to the HDF5 library.  No pointers necessary.

source-repository head
  type: git
  location: git://github.com/mokus0/hs-hdf5.git

Library
  hs-source-dirs:       src
  ghc-options:          -Wall -Werror
  exposed-modules:      Bindings.HDF5
                      , Bindings.HDF5.Core
                      , Bindings.HDF5.Dataset
                      , Bindings.HDF5.Dataspace
                      , Bindings.HDF5.Datatype
                      , Bindings.HDF5.Datatype.Internal
                      , Bindings.HDF5.Error
                      , Bindings.HDF5.ErrorCodes
                      , Bindings.HDF5.File
                      , Bindings.HDF5.Group
                      , Bindings.HDF5.Link
                      , Bindings.HDF5.Object
                      , Bindings.HDF5.PropertyList
                      , Bindings.HDF5.PropertyList.DAPL
                      , Bindings.HDF5.PropertyList.DCPL
                      , Bindings.HDF5.PropertyList.DXPL
                      , Bindings.HDF5.PropertyList.FAPL
                      , Bindings.HDF5.PropertyList.FCPL
                      , Bindings.HDF5.PropertyList.FMPL
                      , Bindings.HDF5.PropertyList.GAPL
                      , Bindings.HDF5.PropertyList.GCPL
                      , Bindings.HDF5.PropertyList.LAPL
                      , Bindings.HDF5.PropertyList.LCPL
                      , Bindings.HDF5.PropertyList.OCPL
                      , Bindings.HDF5.PropertyList.OCPYPL
                      , Bindings.HDF5.PropertyList.STRCPL
                      , Bindings.HDF5.PropertyList.TAPL
                      , Bindings.HDF5.PropertyList.TCPL

  other-modules:        Bindings.HDF5.Core.HDFResultType
                      , Bindings.HDF5.Core.HId

  build-depends:        base >= 3 && < 5
                      , bindings-hdf5
                      , bytestring
                      , tagged
                      , vector

test-suite hdf5-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec >= 2.4.3 && < 2.5
                     , QuickCheck >= 2.9.2 && < 2.10
                     , temporary >= 1.2.0.4 && < 1.3
                     , hdf5
                     , bytestring
                     , exceptions
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
