name:                   hdf5
version:                1.8.8
stability:              provisional

cabal-version:          >= 1.8
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               https://github.com/mokus0/hs-hdf5

category:               Database
synopsis:               Haskell interface to the HDF5 scientific data storage library.
description:            This is a low-level but typesafe Haskell interface to the HDF5 library.  No pointers necessary.

source-repository head
  type: git
  location: git://github.com/mokus0/hs-hdf5.git

Library
  hs-source-dirs:       src
  extensions:           ForeignFunctionInterface, GeneralizedNewtypeDeriving

  ghc-options:          -Wall
  cc-options:           -Wno-format
  exposed-modules:      Bindings.HDF5
                      , Bindings.HDF5.Raw
                      , Bindings.HDF5.Core
                      , Bindings.HDF5.Dataset
                      , Bindings.HDF5.Dataspace
                      , Bindings.HDF5.Datatype
                      , Bindings.HDF5.Datatype.Internal
                      , Bindings.HDF5.Error
                      , Bindings.HDF5.ErrorCodes
                      , Bindings.HDF5.File
                      , Bindings.HDF5.Group
                      , Bindings.HDF5.Link
                      , Bindings.HDF5.Object
                      , Bindings.HDF5.PropertyList
                      , Bindings.HDF5.PropertyList.DAPL
                      , Bindings.HDF5.PropertyList.DCPL
                      , Bindings.HDF5.PropertyList.DXPL
                      , Bindings.HDF5.PropertyList.FAPL
                      , Bindings.HDF5.PropertyList.FCPL
                      , Bindings.HDF5.PropertyList.FMPL
                      , Bindings.HDF5.PropertyList.GAPL
                      , Bindings.HDF5.PropertyList.GCPL
                      , Bindings.HDF5.PropertyList.LAPL
                      , Bindings.HDF5.PropertyList.LCPL
                      , Bindings.HDF5.PropertyList.OCPL
                      , Bindings.HDF5.PropertyList.OCPYPL
                      , Bindings.HDF5.PropertyList.STRCPL
                      , Bindings.HDF5.PropertyList.TAPL
                      , Bindings.HDF5.PropertyList.TCPL

  other-modules:        Bindings.HDF5.Core.HDFResultType
                      , Bindings.HDF5.Core.HId
                      , Bindings.HDF5.Raw.H5
                      , Bindings.HDF5.Raw.H5A
                      , Bindings.HDF5.Raw.H5AC
                      , Bindings.HDF5.Raw.H5C
                      , Bindings.HDF5.Raw.H5D
                      , Bindings.HDF5.Raw.H5E
                      , Bindings.HDF5.Raw.H5F
                      , Bindings.HDF5.Raw.H5FD
                      , Bindings.HDF5.Raw.H5FD.Core
                      , Bindings.HDF5.Raw.H5FD.Family
                      , Bindings.HDF5.Raw.H5FD.Log
                      , Bindings.HDF5.Raw.H5FD.MPI
                      , Bindings.HDF5.Raw.H5FD.Multi
                      , Bindings.HDF5.Raw.H5FD.Sec2
                      , Bindings.HDF5.Raw.H5FD.StdIO
                      , Bindings.HDF5.Raw.H5FD.Direct
                      , Bindings.HDF5.Raw.H5G
                      , Bindings.HDF5.Raw.H5I
                      , Bindings.HDF5.Raw.H5L
                      , Bindings.HDF5.Raw.H5MM
                      , Bindings.HDF5.Raw.H5O
                      , Bindings.HDF5.Raw.H5P
                      , Bindings.HDF5.Raw.H5R
                      , Bindings.HDF5.Raw.H5S
                      , Bindings.HDF5.Raw.H5T
                      , Bindings.HDF5.Raw.H5Z
                      , Bindings.HDF5.Raw.Util
                      , Foreign.Ptr.Conventions

  c-sources:            cbits/H5_inline.c
                      , cbits/H5E_inline.c
                      , cbits/H5FD_inline.c
                      , cbits/H5FD_inline.c
                      , cbits/H5FDmpi_inline.c
                      , cbits/H5G_inline.c
                      , cbits/H5P_inline.c
                      , cbits/H5T_inline.c


  build-depends:        base >= 3 && < 5
                      , bytestring
                      , tagged
                      , vector
                      , bindings-DSL >= 1.0.24 && < 1.1
                      , libffi
                      , monad-control
                      , lifted-base
                      , primitive
                      , transformers

  include-dirs:         include, /usr/local/include
  extra-lib-dirs:       /usr/local/lib
  extra-libraries:      hdf5



test-suite hdf5-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec >= 2.4.3 && < 2.5
                     , QuickCheck >= 2.9.2 && < 2.12
                     , temporary >= 1.2.0.4 && < 1.3
                     , hdf5
                     , bytestring
                     , exceptions
                     , vector
  other-modules:       Spec.Util, Spec.File
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
